--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
   <head>
     <link rel="stylesheet" type="text/css" href="main.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,500&display=swap"
+      href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap"
       rel="stylesheet"
     />
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="prod.js"></script>
   </head>
-
   <body>
     <div class="socials">
       <ul>
@@ -36,52 +35,294 @@
           </a>
         </li>
         <li class="fb pointin fixpoint">
-            <a class="fixtarget">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title"
-                    aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
-                      <title>Facebook</title>
-                      <desc>A solid styled icon from Orion Icon Library.</desc>
-                      <path data-name="layer1"
-                      d="M39.8 12.2H48V0h-9.7C26.6.5 24.2 7.1 24 14v6.1h-8V32h8v32h12V32h9.9l1.9-11.9H36v-3.7a3.962 3.962 0 0 1 3.8-4.2z"
-                      ></path>
-                    </svg>
-            </a>
+          <a class="fixtarget">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 64 64"
+              aria-labelledby="title"
+              aria-describedby="desc"
+              role="img"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+            >
+              <title>Facebook</title>
+              <desc>A solid styled icon from Orion Icon Library.</desc>
+              <path
+                data-name="layer1"
+                d="M39.8 12.2H48V0h-9.7C26.6.5 24.2 7.1 24 14v6.1h-8V32h8v32h12V32h9.9l1.9-11.9H36v-3.7a3.962 3.962 0 0 1 3.8-4.2z"
+              ></path>
+            </svg>
+          </a>
         </li>
       </ul>
     </div>
     <section class="landingPage">
       <div class="landingPage__title">
-        <h1 class="jd">Let us help you build brighter future.</h1>
-        <h3>Interactive Agency based in Poland.</h3>
+        <h1 class="jd">We don't like to be average</h1>
+        <h3>and we are not.</h3>
       </div>
-      <div class="control">
-        <div class="next pelement pointer" data-power="2">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="8"
-            height="14"
-            viewBox="0 0 8 14"
-          >
-            <path
-              class="cls-1"
-              d="M1,14a1,1,0,0,1-.71-1.71L5.59,7,0.29,1.71A1,1,0,0,1,1.71.29l6,6a1,1,0,0,1,0,1.41l-6,6A1,1,0,0,1,1,14Z"
-            />
-          </svg>
-        </div>
-        <div class="prev pelement pointer" data-power="2">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="8"
-            height="14"
-            viewBox="0 0 8 14"
-          >
-            <path
-              class="cls-1"
-              d="M7,0a1,1,0,0,1,.71,1.71L2.41,7l5.29,5.29a1,1,0,1,1-1.41,1.41l-6-6a1,1,0,0,1,0-1.41l6-6A1,1,0,0,1,7,0Z"
-            />
-          </svg>
+      <div class="bottom">
+        <h5>01</h5>
+        <h5>/</h5>
+        <h5>05</h5>      
+        <div class="control">
+          <div class="prev pelement pointer" data-power="2">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="8"
+              height="14"
+              viewBox="0 0 8 14"
+            >
+              <path
+                class="cls-1"
+                d="M7,0a1,1,0,0,1,.71,1.71L2.41,7l5.29,5.29a1,1,0,1,1-1.41,1.41l-6-6a1,1,0,0,1,0-1.41l6-6A1,1,0,0,1,7,0Z"
+              />
+            </svg>
+          </div>
+          <div class="next pelement pointer" data-power="2">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="8"
+              height="14"
+              viewBox="0 0 8 14"
+            >
+              <path
+                class="cls-1"
+                d="M1,14a1,1,0,0,1-.71-1.71L5.59,7,0.29,1.71A1,1,0,0,1,1.71.29l6,6a1,1,0,0,1,0,1.41l-6,6A1,1,0,0,1,1,14Z"
+              />
+            </svg>
+          </div>
         </div>
       </div>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        id="ku"
+        baseProfile="tiny"
+        class="svgmate"
+        version="1"
+        viewBox="0 0 1141 570"
+      >
+        <g id="wall">
+          <path
+            fill="#725AC1"
+            d="M674 185c0 2-2 4-4 4H450c-2 0-4-2-4-4v-52c0-2 2-4 4-4h220c2 0 4 2 4 4v52z"
+          />
+          <path
+            fill="#8D86C9"
+            d="M674 333c0 2-2 4-4 4H553c-2 0-4-2-4-4V203c0-2 2-4 4-4h117c2 0 4 2 4 4v130z"
+          />
+          <path
+            fill="#725AC1"
+            d="M798 317c0 2-2 4-4 4H690c-2 0-4-2-4-4V203c0-2 2-4 4-4h104c2 0 4 2 4 4v114z"
+          />
+          <path
+            fill="#8D86C9"
+            d="M788 308c0 2-2 4-4 4h-85c-2 0-4-2-4-4v-95c0-2 2-4 4-4h85c2 0 4 2 4 4v95z"
+          />
+          <path
+            id="Layer_33"
+            fill="#725AC1"
+            d="M639 240c-4-4-10-4-13 0l-77 77v15l5 5h116c2 0 4-2 4-4v-58l-35-35z"
+          />
+        </g>
+        <g id="light">
+          <circle id="bulb" cx="550" cy="230" r="9" fill="#FFF" />
+          <path fill="#725AC1" d="M550 201l-27 29h55z" />
+        </g>
+
+        <g id="Desk">
+          <path fill="#725AC1" d="M369 386h178v10H369zM547 386h220v10H547z" />
+          <path fill="#8D86C9 " d="M548 396h9v154h-9z" />
+        </g>
+        <g id="Man__x2F__chair__x2F__screen">
+          <path id="chairbackbar" fill="#385C5B" d="M368 468h10v76h-10z" />
+          <path
+            id="keyboard"
+            fill="#D2D2D3"
+            d="M507 380c3 0 4 2 1 4l-3 2h-55s4-6 9-6h48z"
+          />
+          <g id="man">
+            <g id="man-body">
+              <g id="legs">
+                <g id="backleg">
+                  <path
+                    id="foot"
+                    fill="#CAC4CE"
+                    d="M365 513l18-4 6 12s-1 15 6 22l10 5c-1 2-18 2-20 2l-14-9c-6-6-10-22-6-28z"
+                  />
+                  <path
+                    id="bottombackleg"
+                    fill="#374D50"
+                    d="M384 509s45-10 45-16c0-4-7-7-6-10 5-9 24-13 30-3 5 8 0 27-9 29l-55 12-5-12z"
+                  />
+                  <path
+                    id="topbbackleg"
+                    fill="#374D50"
+                    d="M415 474l-26-34c1 0-10-11 12-11s33 4 40 10 14 53 11 60-21-4-28-14l-9-11z"
+                  />
+                </g>
+                <g id="Front-leg">
+                  <path
+                    id="frontfoot"
+                    fill="#CAC4CE"
+                    d="M446 529v21l40-1 2-9s-12 1-20-3-9-8-9-8h-13z"
+                  />
+                  <g id="bot">
+                    <path
+                      fill="#8D86C9"
+                      d="M459 529c5-15 21-89 20-95s-8-18-18-8-19 0-18 26l3 77h13z"
+                    />
+                    <path
+                      id="shade_1_"
+                      fill="#385554"
+                      d="M444 488c7-15 19-35 11-42-5-4-13-2-13-2l2 44z"
+                    />
+                  </g>
+                  <g id="top">
+                    <path
+                      fill="#8D86C9"
+                      d="M410 408c19 3 62 9 67 18s0 14 0 20-11-2-23-2l-99-2c-7 0-12-4-9-18 7-39 64-16 64-16"
+                    />
+                    <path
+                      id="shade"
+                      fill="#725AC1"
+                      d="M397 417c66 10 80 9 80 9s-6-14-70-18c-13 1-10 9-10 9z"
+                    />
+                  </g>
+                </g>
+              </g>
+              <g id="head">
+                <g id="face">
+                  <path
+                    fill="#CAC4CE"
+                    d="M411 281c0-12-8-25-19-16s-21 23-18 31 2 24 2 24c0 9 25 18 23 0s6-10 9-10 2 0 2-5l1-24z"
+                  />
+                  <path
+                    id="faceglow"
+                    fill="#F7ECE1"
+                    d="M411 264c5 5 6 23 3 32s-6 5-5 1c1-2 3-23-2-29-5-5 4-4 4-4z"
+                  />
+                </g>
+                <g id="hair">
+                  <path
+                    fill="black"
+                    d="M396 287c-2-9-1-14 3-15s15-21-1-22c-17 0-26-14-33 0s4 19 4 19-10 2-9 14 9 12 12 15c5 7 2 8 4 11 0 0 11-2 11-10s-4-15-1-18 8 1 7 19c-1 13 4 20 7 21s15 5 16 1 0-12-3-18c-1-3 2-9 0-11-3-2-4 6-8 5s-7-5-9-11z"
+                  />
+                  <path
+                    fill="black"
+                    d="M399 272c4-1 10-1 14-8s7-19 2-22-1 9-17 8c-27-1-3 23 1 22z"
+                    class="mankauf"
+                  />
+                </g>
+              </g>
+              <g id="torso">
+                <path
+                  id="shirt"
+                  fill="#27b8c2"
+                  d="M357 340l19-19h11c40 0 40 7 30 64-7 35-13 32-32 39-12 5-22 5-35 4s7-88 7-88z"
+                />
+              </g>
+              <g id="arm">
+                <g id="Bluearmbot">
+                  <path
+                    fill="#F7ECE1"
+                    d="M487 380c-5-4-11-12-16-10-7 3-6 10 3 10h13z"
+                  />
+                  <path fill="#CAC4CE" d="M437 384l34-14-4 6-27 19z" />
+                  <path
+                    fill="#CAC4CE"
+                    d="M440 395s20-16 26-19c4-2 10 1 11 4h-7c-5 6-14 20-22 23-1 1-8-8-8-8z"
+                  />
+                </g>
+                <path
+                  id="Bluearmtop"
+                  fill="#CAC4CE"
+                  d="M404 360l31 40c5 4 9 4 10 4 10-1-4-5-5-11l-10-54c-28-6-26 21-26 21z"
+                />
+                <path
+                  id="armhighlight"
+                  fill="#F7ECE1"
+                  d="M439 386l-15-37 7-7z"
+                />
+                <path
+                  id="toparm"
+                  fill="#208f96"
+                  d="M406 322c22-5 26 18 24 21-3 8-26 19-26 19l-8-15c-8-18 10-25 10-25z"
+                />
+                <path
+                  id="toparmshade"
+                  fill="#27b8c2"
+                  d="M418 334c-5-7-10-13-13-11-8 2-15 14-8 27 4 9 7 12 7 12s15-7 19-12c3-3-3-13-5-16z"
+                />
+              </g>
+            </g>
+          </g>
+          <g id="Chair">
+            <path id="foot_1_" fill="#385C5B" d="M337 550h73l-10-13h-52z" />
+            <g id="seat">
+              <path
+                fill="#364046"
+                d="M371 442l53 1c3 0 6 0 6 7 0 5-3 6-6 6h-22s-2 6-4 7h-14l-4 12h-15l-5-12-3-8 14-13z"
+              />
+              <path
+                fill="#364046"
+                d="M326 449c0 4 3 7 11 7h47s-5-1-5-6c0-3 0-8 5-8h-48c-7 0-10 2-10 7z"
+              />
+            </g>
+            <g id="backrest">
+              <path
+                fill="#725AC1"
+                d="M349 340c12 0 19-2 20 8l7 41c2 14 4 29-18 29 7-5 12-7 12-10 0 0-6-56-12-61l-9-7z"
+              />
+              <path
+                fill="#364046"
+                d="M318 340c-8 0-12 5-10 17l8 48c2 8 5 13 14 13h29s14-2 12-19-6-32-8-45-7-14-14-14h-31z"
+              />
+              <path
+                fill="#242038"
+                d="M332 376c-6 0-12-1-9 11l5 24c1 5 1 6 8 6h19s7 1 5-8l-5-25c-1-5-1-8-9-8h-14z"
+              />
+              <path
+                fill="#36474A"
+                d="M345 395l2 1 9 49c1 6 5 11 7 12s2 6 2 6-8-2-10-3-7-25-7-25l-3-28-2-11 2-1z"
+              />
+              <path
+                fill="#364046"
+                d="M332 395l9 51c1 8 3 16 13 17h11s-7-3-9-6c-4-4-7-28-7-28l-4-34h-13z"
+              />
+            </g>
+          </g>
+          <g id="Man_screen">
+            <g class="redskmove">
+              <path
+                fill="#8D86C9"
+                d="M574 360c0 2-2 4-4 4h-89c-2 0-4-2-4-4v-69c0-2 2-4 4-4h89c2 0 4 2 4 4v69z"
+                class="redscreen"
+              />
+            </g>
+            <g class="greenscrmove">
+              <g class="greenscreen">
+                <path
+                  fill="#27b8c2"
+                  d="M523 337c0 2-2 4-4 4h-68c-2 0-4-2-4-4v-46c0-2 2-4 4-4h68c2 0 4 2 4 4v46z"
+                />
+                <path
+                  fill="#F7FCFB"
+                  d="M517 307c0 2-2 4-4 4h-51c-2 0-4-2-4-4v-4c0-2 2-4 4-4h51c2 0 4 2 4 4v4z"
+                />
+                <path
+                  fill="#3C716B"
+                  d="M492 326c0 2-2 4-4 4h-26c-2 0-4-2-4-4v-2c0-2 2-4 4-4h26c2 0 4 2 4 4v2z"
+                />
+              </g>
+            </g>
+            <g class="screenbutton">
+              <circle cx="528" cy="324" r="18" fill="#48397A" />
+              <circle cx="523" cy="314" r="18" fill="#725AC1" />
+              <path fill="white" d="M523 309l-4 8h8z" />
+            </g>
+          </g>
+        </g>
+      </svg>
     </section>
     <div class="cursor">
       <!-- Main -->
