--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="main.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,500&display=swap"
+      href="https://fonts.googleapis.com/css?family=Montserrat:400,500,800&display=swap"
       rel="stylesheet"
     />
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <header>
+      <h1>// SLASHERS</h1>
+    </header>
     <div class="socials">
       <ul>
         <li class="tw pointin fixpoint">
