--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="landingPage__title">
         <h1 class="jd">We don't like to be average</h1>
         <h3>and we are not.</h3>
-        <a class="btnmore pelement pointin" data-power="3"><h5>ABOUT US</h5></a>
+        <a class="btnmore pelement pointin" data-power="3"><h5>// ABOUT US</h5></a>
       </div>
       <div class="bottomSection">
         <h5>01</h5>
