--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <div class="bottomMenu" style="visibility: inherit; opacity: 1;">
         <div class="line" style="bottom: 0px; height: 50%;"></div>
         <div class="counter">
-          <span class="page" style="margin-bottom: 0px;">1</span>
-          <span class="divider" style="margin-bottom: 0px;">/</span>
-          <span class="total" style="margin-bottom: 0px;">5</span>
+          <span class="page" style="margin-bottom: 0px;"></span>
+          <span class="divider" style="margin-bottom: 0px;"></span>
+          <span class="total" style="margin-bottom: 0px;"></span>
         </div>
       </div>
     </div>
@@ -45,44 +45,8 @@
         <circle cx="50%" cy="50%" r="50%" />
         <circle class="countdown" cx="50%" cy="50%" r="50%" />
       </svg>
-      <svg class="inner-circle">
-        <circle cx="50%" cy="50%" r="50%" />
-      </svg>
-      <svg class="arrow-left" width="10px" height="13px">
-        <path
-          fill-rule="evenodd"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          fill="none"
-          d="M6.375,2.667 L3.250,4.667 C3.250,4.667 2.625,5.007 2.625,6.000 C2.625,7.035 3.250,7.333 3.250,7.333 L6.375,9.333 "
-        />
-      </svg>
-      <svg class="arrow-right" width="10px" height="13px">
-        <path
-          fill-rule="evenodd"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          fill="none"
-          d="M6.375,2.667 L3.250,4.667 C3.250,4.667 2.625,5.007 2.625,6.000 C2.625,7.035 3.250,7.333 3.250,7.333 L6.375,9.333 "
-        />
-      </svg>
-      <svg class="play" width="31px" height="38px">
-        <path
-          fill-rule="evenodd"
-          d="M29.000,24.000 C29.000,24.000 13.600,38.000 7.000,38.000 C0.400,38.000 -0.000,31.000 -0.000,31.000 L-0.000,19.000 L-0.000,7.000 C-0.000,7.000 0.400,-0.000 7.000,-0.000 C13.600,-0.000 29.000,14.000 29.000,14.000 C29.000,14.000 31.000,14.800 31.000,19.000 C31.000,23.200 29.000,24.000 29.000,24.000 Z"
-        />
-      </svg>
-      <svg class="stop" width="31px" height="38px">
-        <path fill-rule="evenodd" d="M28.933,19.034 L35.314,25.414
-        C38.047,28.148 38.047,32.580 35.314,35.314 C32.580,38.047 28.148,38.047
-        25.414,35.314 L19.034,28.933 L12.042,35.925 C9.290,38.677 4.828,38.677
-        2.075,35.925 C-0.677,33.172 -0.677,28.710 2.075,25.958 L9.067,18.966
-        L2.686,12.586 C-0.047,9.852 -0.047,5.420 2.686,2.686 C5.420,-0.047
-        9.852,-0.047 12.586,2.686 L18.966,9.067 L24.958,3.075 C27.710,0.323
-        32.172,0.323 34.925,3.075 C37.677,5.828 37.677,10.290 34.925,13.042
-        L28.933,19.034 Z"
-      </svg>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
