--- a/index.html
+++ b/index.html
@@ -15,7 +15,38 @@
   <body>
     <div class="layout">
       <div class="topbar">
-        <div class="topbar__logo"></div>
+        <div class="topbar__logo">
+          <svg
+            version="1.1"
+            id="Warstwa_1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px"
+            y="0px"
+            viewBox="0 0 200 200"
+            style="enable-background:new 0 0 200 200;"
+            xml:space="preserve"
+          >
+            <style type="text/css">
+              .st0 {
+                fill: none;
+                stroke: #aebebf;
+                stroke-width: 10;
+                stroke-miterlimit: 10;
+              }
+            </style>
+            <g>
+              <path d="M101.3,65.1l-26.7,66.1H62.1l26.7-66.1H101.3z" />
+              <path d="M136.9,65.1l-26.7,66.1H97.8l26.7-66.1H136.9z" />
+            </g>
+            <path
+              class="st0"
+              d="M100,169.5L100,169.5c-38.4,0-69.5-31.1-69.5-69.5v0c0-38.4,31.1-69.5,69.5-69.5h0c38.4,0,69.5,31.1,69.5,69.5
+         v0C169.5,138.4,138.4,169.5,100,169.5z"
+            />
+          </svg>
+          SLASHERS
+        </div>
         <div class="topbar__menu">
           <a class="hover"><span>Contact</span> </a>
         </div>
