--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
           <span class="total" style="margin-bottom: 0px;"></span>
         </div>
       </div>
+      <section id="home">
+        <h1>Hello</h1>
+      </section>
     </div>
+
     <div class="mouse-track">
       <svg class="outer-circle">
         <circle cx="50%" cy="50%" r="50%" />
