--- a/index.html
+++ b/index.html
@@ -55,8 +55,13 @@
       </div>
     </div>
     <section id="home">
-      <h1 class="heading--stroke heading--halftone">Hello</h1>
+      <h1 class="heading--stroke heading--halftone hello">Hello</h1>
       <h3>We are digital agency and we are waiting for you specializing in web development.</br> Scroll down to get to know us.</h3>
+    </section>
+    <section id="project1">
+      <h4>FIRST PROJECT</h4>
+      <h1 class="heading--stroke heading--halftone trader24">Trader24</h1>
+      <h3>Web application allowing users to trade shares of real life US companies. With implementation<br/> of market analytics tools with amazing UI.</h3>
     </section>
   </div>
 
