--- a/index.html
+++ b/index.html
@@ -59,9 +59,13 @@
       <h3>We are digital agency and we are waiting for you specializing in web development.</br> Scroll down to get to know us.</h3>
     </section>
     <section id="project1">
-      <h4>FIRST PROJECT</h4>
-      <h1 class="heading--stroke heading--halftone trader24">Trader24</h1>
-      <h3>Web application allowing users to trade shares of real life US companies. With implementation<br/> of market analytics tools with amazing UI.</h3>
+      <div class="info">
+      <h5 class="type">WEB APPLICATION</h5>
+      <h2 class="heading--stroke heading--halftone trader24">Trader24</h2>
+      <h3>Web application allowing users to trade shares of real life US companies. With<br/>  implementation of market analytics tools with futuristic UI.</h3>
+      </div>
+
+<img class="presentation" src="images/trader24.png">
     </section>
   </div>
 
