better animations, changed presentation

--- a/index.html
+++ b/index.html
@@ -55,14 +55,16 @@
       </div>
     </div>
     <section id="home">
+      <div class="info">
       <h1 class="heading--stroke heading--halftone hello">Hello</h1>
       <h3>We are digital agency and we are waiting for you specializing in web development.</br> Scroll down to get to know us.</h3>
+      </div>
     </section>
     <section id="project1">
       <div class="info">
       <h5 class="type">WEB APPLICATION</h5>
       <h2 class="heading--stroke heading--halftone trader24">Trader24</h2>
-      <h3>Web application allowing users to trade shares of real life US companies. With<br/>  implementation of market analytics tools with futuristic UI.</h3>
+      <h3>Web application allowing users to trade shares of real life US companies. With implementation of market analytics tools with futuristic UI.</h3>
       </div>
 
 <img class="presentation" src="images/trader24.png">
