--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </h3>
         </div>
 
-        <img class="presentation" src="images/socialme.jpg" />
+        <img class="presentation socialme" src="images/socialme.jpg" />
       </section>
     </div>
 
