--- a/index.html
+++ b/index.html
@@ -1,119 +1,136 @@
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="main.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="prod.js"></script>
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:600,700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <div class="layout">
-      <div class="topbar">
-        <div class="topbar__logo">
-          <svg
-            version="1.1"
-            id="Warstwa_1"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            x="0px"
-            y="0px"
-            viewBox="0 0 200 200"
-            style="enable-background:new 0 0 200 200;"
-            xml:space="preserve"
-          >
-            <style type="text/css">
-              .st0 {
-                fill: none;
-                stroke: #969292;
-                stroke-width: 10;
-                stroke-miterlimit: 10;
-              }
-            </style>
+<head>
+  <link rel="stylesheet" type="text/css" href="main.css" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet" />
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="prod.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="layout">
+    <div class="topbar">
+      <div class="topbar__logo">
+        <svg version="1.1" id="Warstwa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+          x="0px" y="0px" viewBox="0 0 200 200" style="enable-background:new 0 0 200 200;" xml:space="preserve">
+          <style type="text/css">
+            .st0 {
+              fill: none;
+              stroke: #969292;
+              stroke-width: 10;
+              stroke-miterlimit: 10;
+            }
+          </style>
+          <g>
+            <path d="M101.3,65.1l-26.7,66.1H62.1l26.7-66.1H101.3z" />
+            <path d="M136.9,65.1l-26.7,66.1H97.8l26.7-66.1H136.9z" />
+          </g>
+          <path class="st0" d="M100,169.5L100,169.5c-38.4,0-69.5-31.1-69.5-69.5v0c0-38.4,31.1-69.5,69.5-69.5h0c38.4,0,69.5,31.1,69.5,69.5
+         v0C169.5,138.4,138.4,169.5,100,169.5z" />
+        </svg>
+        SLASHERS
+      </div>
+      <div class="topbar__menu">
+        <a class="hover"><span>Contact</span> </a>
+      </div>
+    </div>
+    <svg class="gradient">
+      <lineargradient id="gradient1" gradientTransform="rotate(25)">
+        <stop offset="0%" />
+        <stop offset="100%" />
+      </lineargradient>
+      <filter id="noise">
+        <feTurbulence type="fractalNoise" baseFrequency=".7" result="noisy" />
+      </filter>
+      <rect width="100%" height="100%" fill="url(#gradient1)" />
+      <rect width="100%" height="100%" filter="url(#noise)" opacity=".1" />
+    </svg>
+    <div class="bottomMenu" style="visibility: inherit; opacity: 1;">
+      <div class="line" style="bottom: 0px; height: 50%;"></div>
+      <div class="counter">
+        <span class="page" style="margin-bottom: 0px;"></span>
+        <span class="divider" style="margin-bottom: 0px;"></span>
+        <span class="total" style="margin-bottom: 0px;"></span>
+      </div>
+    </div>
+    <section id="home">
+      <div class="info">
+        <h1 class="heading--stroke heading--halftone hello">Hello</h1>
+        <h3>
+          We are digital agency and we are waiting for you specializing in web
+          development.<br />
+          Scroll down to get to know us.
+        </h3>
+      </div>
+    </section>
+    <section id="home">
+      <div class="info">
+        <h1 class="heading--stroke heading--halftone hello">Hello</h1>
+        <h3>
+          We are digital agency and we are waiting for you specializing in web
+          development.<br />
+          Scroll down to get to know us.
+        </h3>
+      </div>
+    </section>
+    <section id="project1">
+      <div class="info">
+        <h5 class="type">PROJECT 1 - WEB APPLICATION</h5>
+        <h2 class="heading--stroke heading--halftone trader24">Trader24</h2>
+        <h3>
+          Web application allowing users to trade shares of real life US
+          companies. With implementation of market analytics tools with
+          futuristic UI.
+        </h3>
+      </div>
+
+      <img class="presentation" src="images/trader24.png" />
+      <div class="explore">
+        <a class="hover" href="https://stocks-af048.web.app/" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <g>
-              <path d="M101.3,65.1l-26.7,66.1H62.1l26.7-66.1H101.3z" />
-              <path d="M136.9,65.1l-26.7,66.1H97.8l26.7-66.1H136.9z" />
+              <path fill="none" d="M0 0h24v24H0z" />
+              <path
+                d="M18.364 15.536L16.95 14.12l1.414-1.414a5 5 0 1 0-7.071-7.071L9.879 7.05 8.464 5.636 9.88 4.222a7 7 0 0 1 9.9 9.9l-1.415 1.414zm-2.828 2.828l-1.415 1.414a7 7 0 0 1-9.9-9.9l1.415-1.414L7.05 9.88l-1.414 1.414a5 5 0 1 0 7.071 7.071l1.414-1.414 1.415 1.414zm-.708-10.607l1.415 1.415-7.071 7.07-1.415-1.414 7.071-7.07z" />
             </g>
-            <path
-              class="st0"
-              d="M100,169.5L100,169.5c-38.4,0-69.5-31.1-69.5-69.5v0c0-38.4,31.1-69.5,69.5-69.5h0c38.4,0,69.5,31.1,69.5,69.5
-         v0C169.5,138.4,138.4,169.5,100,169.5z"
-            />
           </svg>
-          SLASHERS
-        </div>
-        <div class="topbar__menu">
-          <a class="hover"><span>Contact</span> </a>
-        </div>
+          <span>ExploreTrader24</span>
+        </a>
       </div>
-      <svg class="gradient">
-        <lineargradient id="gradient1" gradientTransform="rotate(25)">
-          <stop offset="0%" />
-          <stop offset="100%" />
-        </lineargradient>
-        <filter id="noise">
-          <feTurbulence type="fractalNoise" baseFrequency=".7" result="noisy" />
-        </filter>
-        <rect width="100%" height="100%" fill="url(#gradient1)" />
-        <rect width="100%" height="100%" filter="url(#noise)" opacity=".1" />
-      </svg>
-      <div class="bottomMenu" style="visibility: inherit; opacity: 1;">
-        <div class="line" style="bottom: 0px; height: 50%;"></div>
-        <div class="counter">
-          <span class="page" style="margin-bottom: 0px;"></span>
-          <span class="divider" style="margin-bottom: 0px;"></span>
-          <span class="total" style="margin-bottom: 0px;"></span>
-        </div>
+    </section>
+    <section id="project2">
+      <div class="info">
+        <h5 class="type">PROJECT 2 - WEB APPLICATION</h5>
+        <h2 class="heading--stroke heading--halftone socialme">SocialMe</h2>
+        <h3>
+          Application that has all your social media in one place.
+        </h3>
       </div>
-      <section id="home">
-        <div class="info">
-          <h1 class="heading--stroke heading--halftone hello">Hello</h1>
-          <h3>
-            We are digital agency and we are waiting for you specializing in web
-            development.<br />
-            Scroll down to get to know us.
-          </h3>
-        </div>
-      </section>
-      <section id="project1">
-        <div class="info">
-          <h5 class="type">WEB APPLICATION</h5>
-          <h2 class="heading--stroke heading--halftone trader24">Trader24</h2>
-          <h3>
-            Web application allowing users to trade shares of real life US
-            companies. With implementation of market analytics tools with
-            futuristic UI.
-          </h3>
-        </div>
+      <img class="presentation socialme" src="images/socialme.jpg" />
+      <div class="explore">
+        <a class="hover" href="https://socialanalytics-94264.web.app/" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <g>
+              <path fill="none" d="M0 0h24v24H0z" />
+              <path
+                d="M18.364 15.536L16.95 14.12l1.414-1.414a5 5 0 1 0-7.071-7.071L9.879 7.05 8.464 5.636 9.88 4.222a7 7 0 0 1 9.9 9.9l-1.415 1.414zm-2.828 2.828l-1.415 1.414a7 7 0 0 1-9.9-9.9l1.415-1.414L7.05 9.88l-1.414 1.414a5 5 0 1 0 7.071 7.071l1.414-1.414 1.415 1.414zm-.708-10.607l1.415 1.415-7.071 7.07-1.415-1.414 7.071-7.07z" />
+            </g>
+          </svg>
+          <span>ExploreSocialMe</span>
+        </a>
+      </div>
+    </section>
+  </div>
 
-        <img class="presentation" src="images/trader24.png" />
-      </section>
-      <section id="project2">
-        <div class="info">
-          <h5 class="type">WEB APPLICATION</h5>
-          <h2 class="heading--stroke heading--halftone socialme">SocialMe</h2>
-          <h3>
-            Application that has all your social media in one place.
-          </h3>
-        </div>
+  <div class="mouse-track">
+    <svg class="outer-circle">
+      <circle cx="50%" cy="50%" r="50%" />
+      <circle class="countdown" cx="50%" cy="50%" r="50%" />
+    </svg>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
+  <script src="main.js"></script>
+</body>
 
-        <img class="presentation socialme" src="images/socialme.jpg" />
-      </section>
-    </div>
-
-    <div class="mouse-track">
-      <svg class="outer-circle">
-        <circle cx="50%" cy="50%" r="50%" />
-        <circle class="countdown" cx="50%" cy="50%" r="50%" />
-      </svg>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
-    <script src="main.js"></script>
-  </body>
 </html>
