--- a/index.html
+++ b/index.html
@@ -64,14 +64,9 @@
         </h3>
       </div>
     </section>
-    <section id="home">
+    <section id="services">
       <div class="info">
-        <h1 class="heading--stroke heading--halftone hello">Hello</h1>
-        <h3>
-          We are digital agency and we are waiting for you specializing in web
-          development.<br />
-          Scroll down to get to know us.
-        </h3>
+        <h1 class="heading--stroke heading--halftone services">Services</h1>
       </div>
     </section>
     <section id="project1">
@@ -121,7 +116,13 @@
         </a>
       </div>
     </section>
+    <section id="contact">
+      <div class="info">
+        <h1 class="heading--stroke heading--halftone contact">Contact</h1>
+      </div>
+    </section>
   </div>
+
 
   <div class="mouse-track">
     <svg class="outer-circle">
