--- a/index.html
+++ b/index.html
@@ -1,137 +1,189 @@
 <html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="prod.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:600,700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <link rel="stylesheet" type="text/css" href="main.css" />
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet" />
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="prod.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700&display=swap" rel="stylesheet" />
-</head>
-
-<body>
-  <div class="layout">
-    <div class="topbar">
-      <div class="topbar__logo">
-        <svg version="1.1" id="Warstwa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-          x="0px" y="0px" viewBox="0 0 200 200" style="enable-background:new 0 0 200 200;" xml:space="preserve">
-          <style type="text/css">
-            .st0 {
-              fill: none;
-              stroke: #969292;
-              stroke-width: 10;
-              stroke-miterlimit: 10;
-            }
-          </style>
-          <g>
-            <path d="M101.3,65.1l-26.7,66.1H62.1l26.7-66.1H101.3z" />
-            <path d="M136.9,65.1l-26.7,66.1H97.8l26.7-66.1H136.9z" />
-          </g>
-          <path class="st0" d="M100,169.5L100,169.5c-38.4,0-69.5-31.1-69.5-69.5v0c0-38.4,31.1-69.5,69.5-69.5h0c38.4,0,69.5,31.1,69.5,69.5
-         v0C169.5,138.4,138.4,169.5,100,169.5z" />
+  <body>
+    <div class="layout">
+      <div class="topbar">
+        <div class="topbar__logo">
+          <svg
+            version="1.1"
+            id="Warstwa_1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px"
+            y="0px"
+            viewBox="0 0 200 200"
+            style="enable-background:new 0 0 200 200;"
+            xml:space="preserve"
+          >
+            <style type="text/css">
+              .st0 {
+                fill: none;
+                stroke: #969292;
+                stroke-width: 10;
+                stroke-miterlimit: 10;
+              }
+            </style>
+            <g>
+              <path d="M101.3,65.1l-26.7,66.1H62.1l26.7-66.1H101.3z" />
+              <path d="M136.9,65.1l-26.7,66.1H97.8l26.7-66.1H136.9z" />
+            </g>
+            <path
+              class="st0"
+              d="M100,169.5L100,169.5c-38.4,0-69.5-31.1-69.5-69.5v0c0-38.4,31.1-69.5,69.5-69.5h0c38.4,0,69.5,31.1,69.5,69.5
+         v0C169.5,138.4,138.4,169.5,100,169.5z"
+            />
+          </svg>
+          SLASHERS
+        </div>
+      </div>
+      <svg class="gradient">
+        <lineargradient id="gradient1" gradientTransform="rotate(25)">
+          <stop offset="0%" />
+          <stop offset="100%" />
+        </lineargradient>
+        <filter id="noise">
+          <feTurbulence type="fractalNoise" baseFrequency=".7" result="noisy" />
+        </filter>
+        <rect width="100%" height="100%" fill="url(#gradient1)" />
+        <rect width="100%" height="100%" filter="url(#noise)" opacity=".1" />
+      </svg>
+      <div class="bottomMenu" style="visibility: inherit; opacity: 1;">
+        <div class="line" style="bottom: 0px; height: 50%;"></div>
+        <div class="counter">
+          <span class="page" style="margin-bottom: 0px;"></span>
+          <span class="divider" style="margin-bottom: 0px;"></span>
+          <span class="total" style="margin-bottom: 0px;"></span>
+        </div>
+      </div>
+      <section id="home">
+        <div class="info">
+          <h1 class="heading--stroke heading--halftone hello">Hello</h1>
+          <h3>
+            We are digital agency and we are waiting for you specializing in web
+            development.<br />
+            Scroll down to get to know us.
+          </h3>
+        </div>
+      </section>
+      <section id="services">
+        <div class="info">
+          <h1 class="heading--stroke heading--halftone services">Services</h1>
+          <div class="row">
+            <div class="box hide">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g>
+                <path fill="none" d="M0 0h24v24H0z"/>
+                <path d="M15.199 9.945a2.6 2.6 0 0 1-.79-1.551l-.403-3.083-2.73 1.486a2.6 2.6 0 0 1-1.72.273L6.5 6.5l.57 3.056a2.6 2.6 0 0 1-.273 1.72l-1.486 2.73 3.083.403a2.6 2.6 0 0 1 1.55.79l2.138 2.257 1.336-2.807a2.6 2.6 0 0 1 1.23-1.231l2.808-1.336-2.257-2.137zm.025 5.563l-2.213 4.65a.6.6 0 0 1-.977.155l-3.542-3.739a.6.6 0 0 0-.357-.182l-5.107-.668a.6.6 0 0 1-.449-.881l2.462-4.524a.6.6 0 0 0 .062-.396L4.16 4.86a.6.6 0 0 1 .7-.7l5.063.943a.6.6 0 0 0 .396-.062l4.524-2.462a.6.6 0 0 1 .881.45l.668 5.106a.6.6 0 0 0 .182.357l3.739 3.542a.6.6 0 0 1-.155.977l-4.65 2.213a.6.6 0 0 0-.284.284zm.797 1.927l1.414-1.414 4.243 4.242-1.415 1.415-4.242-4.243z"/>
+            </g>
         </svg>
-        SLASHERS
-      </div>
-      <div class="topbar__menu">
-        <a class="hover"><span>Contact</span> </a>
-      </div>
-    </div>
-    <svg class="gradient">
-      <lineargradient id="gradient1" gradientTransform="rotate(25)">
-        <stop offset="0%" />
-        <stop offset="100%" />
-      </lineargradient>
-      <filter id="noise">
-        <feTurbulence type="fractalNoise" baseFrequency=".7" result="noisy" />
-      </filter>
-      <rect width="100%" height="100%" fill="url(#gradient1)" />
-      <rect width="100%" height="100%" filter="url(#noise)" opacity=".1" />
-    </svg>
-    <div class="bottomMenu" style="visibility: inherit; opacity: 1;">
-      <div class="line" style="bottom: 0px; height: 50%;"></div>
-      <div class="counter">
-        <span class="page" style="margin-bottom: 0px;"></span>
-        <span class="divider" style="margin-bottom: 0px;"></span>
-        <span class="total" style="margin-bottom: 0px;"></span>
-      </div>
-    </div>
-    <section id="home">
-      <div class="info">
-        <h1 class="heading--stroke heading--halftone hello">Hello</h1>
-        <h3>
-          We are digital agency and we are waiting for you specializing in web
-          development.<br />
-          Scroll down to get to know us.
-        </h3>
-      </div>
-    </section>
-    <section id="services">
-      <div class="info">
-        <h1 class="heading--stroke heading--halftone services">Services</h1>
-      </div>
-    </section>
-    <section id="project1">
-      <div class="info">
-        <h5 class="type">PROJECT 1 - WEB APPLICATION</h5>
-        <h2 class="heading--stroke heading--halftone trader24">Trader24</h2>
-        <h3>
-          Web application allowing users to trade shares of real life US
-          companies. With implementation of market analytics tools with
-          futuristic UI.
-        </h3>
-      </div>
-
-      <img class="presentation" src="images/trader24.png" />
-      <div class="explore">
-        <a class="hover" href="https://stocks-af048.web.app/" target="_blank">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <g>
-              <path fill="none" d="M0 0h24v24H0z" />
-              <path
-                d="M18.364 15.536L16.95 14.12l1.414-1.414a5 5 0 1 0-7.071-7.071L9.879 7.05 8.464 5.636 9.88 4.222a7 7 0 0 1 9.9 9.9l-1.415 1.414zm-2.828 2.828l-1.415 1.414a7 7 0 0 1-9.9-9.9l1.415-1.414L7.05 9.88l-1.414 1.414a5 5 0 1 0 7.071 7.071l1.414-1.414 1.415 1.414zm-.708-10.607l1.415 1.415-7.071 7.07-1.415-1.414 7.071-7.07z" />
+              <h4>
+                <span class="red">Web design</span>
+                 created especially for your services with a lot of creativness.
+              </h4>
+            </div>
+            <div class="box hide">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g>
+                <path fill="none" d="M0 0h24v24H0z"/>
+                <path d="M20.083 15.2l1.202.721a.5.5 0 0 1 0 .858l-8.77 5.262a1 1 0 0 1-1.03 0l-8.77-5.262a.5.5 0 0 1 0-.858l1.202-.721L12 20.05l8.083-4.85zm0-4.7l1.202.721a.5.5 0 0 1 0 .858L12 17.65l-9.285-5.571a.5.5 0 0 1 0-.858l1.202-.721L12 15.35l8.083-4.85zm-7.569-9.191l8.771 5.262a.5.5 0 0 1 0 .858L12 13 2.715 7.429a.5.5 0 0 1 0-.858l8.77-5.262a1 1 0 0 1 1.03 0zM12 3.332L5.887 7 12 10.668 18.113 7 12 3.332z"/>
             </g>
-          </svg>
-          <span>ExploreTrader24</span>
-        </a>
-      </div>
-    </section>
-    <section id="project2">
-      <div class="info">
-        <h5 class="type">PROJECT 2 - WEB APPLICATION</h5>
-        <h2 class="heading--stroke heading--halftone socialme">SocialMe</h2>
-        <h3>
-          Application that has all your social media in one place.
-        </h3>
-      </div>
-      <img class="presentation socialme" src="images/socialme.jpg" />
-      <div class="explore">
-        <a class="hover" href="https://socialanalytics-94264.web.app/" target="_blank">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <g>
-              <path fill="none" d="M0 0h24v24H0z" />
-              <path
-                d="M18.364 15.536L16.95 14.12l1.414-1.414a5 5 0 1 0-7.071-7.071L9.879 7.05 8.464 5.636 9.88 4.222a7 7 0 0 1 9.9 9.9l-1.415 1.414zm-2.828 2.828l-1.415 1.414a7 7 0 0 1-9.9-9.9l1.415-1.414L7.05 9.88l-1.414 1.414a5 5 0 1 0 7.071 7.071l1.414-1.414 1.415 1.414zm-.708-10.607l1.415 1.415-7.071 7.07-1.415-1.414 7.071-7.07z" />
+        </svg>
+              <h4>
+                <span class="red">Web application</span>
+                 of all kinds of sizes from smaller ones to this huge with milions lines of code.
+              </h4>
+            </div>
+            <div class="box hide">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g>
+                <path fill="none" d="M0 0h24v24H0z"/>
+                <path d="M5.764 8l-.295-.73a1 1 0 0 1 .553-1.302l9.272-3.746a1 1 0 0 1 1.301.552l5.62 13.908a1 1 0 0 1-.553 1.302L12.39 21.73a1 1 0 0 1-1.302-.553L11 20.96V21H7a1 1 0 0 1-1-1v-.27l-3.35-1.353a1 1 0 0 1-.552-1.302L5.764 8zM8 19h2.209L8 13.533V19zm-2-6.244l-1.673 4.141L6 17.608v-4.852zm1.698-5.309l4.87 12.054 7.418-2.997-4.87-12.053-7.418 2.996zm2.978 2.033a1 1 0 1 1-.749-1.855 1 1 0 0 1 .75 1.855z"/>
             </g>
-          </svg>
-          <span>ExploreSocialMe</span>
-        </a>
-      </div>
-    </section>
-    <section id="contact">
-      <div class="info">
-        <h1 class="heading--stroke heading--halftone contact">Contact</h1>
-      </div>
-    </section>
-  </div>
+        </svg>
+              <h4>
+                <span class="red">Branding</span> of your company or services, you will don't have to worry about your image online.
+              </h4>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="project1">
+        <div class="info">
+          <h5 class="type">PROJECT 1 - WEB APPLICATION</h5>
+          <h2 class="heading--stroke heading--halftone trader24">Trader24</h2>
+          <h3>
+            Web application allowing users to trade shares of real life US
+            companies. With implementation of market analytics tools with
+            futuristic UI.
+          </h3>
+        </div>
 
+        <img class="presentation" src="images/trader24.png" />
+        <div class="explore">
+          <a class="hover" href="https://stocks-af048.web.app/" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <g>
+                <path fill="none" d="M0 0h24v24H0z" />
+                <path
+                  d="M18.364 15.536L16.95 14.12l1.414-1.414a5 5 0 1 0-7.071-7.071L9.879 7.05 8.464 5.636 9.88 4.222a7 7 0 0 1 9.9 9.9l-1.415 1.414zm-2.828 2.828l-1.415 1.414a7 7 0 0 1-9.9-9.9l1.415-1.414L7.05 9.88l-1.414 1.414a5 5 0 1 0 7.071 7.071l1.414-1.414 1.415 1.414zm-.708-10.607l1.415 1.415-7.071 7.07-1.415-1.414 7.071-7.07z"
+                />
+              </g>
+            </svg>
+            <span>ExploreTrader24</span>
+          </a>
+        </div>
+      </section>
+      <section id="project2">
+        <div class="info">
+          <h5 class="type">PROJECT 2 - WEB APPLICATION</h5>
+          <h2 class="heading--stroke heading--halftone socialme">SocialMe</h2>
+          <h3>
+            Application that has all your social media in one place.
+          </h3>
+        </div>
+        <img class="presentation socialme" src="images/socialme.jpg" />
+        <div class="explore">
+          <a
+            class="hover"
+            href="https://socialanalytics-94264.web.app/"
+            target="_blank"
+          >
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <g>
+                <path fill="none" d="M0 0h24v24H0z" />
+                <path
+                  d="M18.364 15.536L16.95 14.12l1.414-1.414a5 5 0 1 0-7.071-7.071L9.879 7.05 8.464 5.636 9.88 4.222a7 7 0 0 1 9.9 9.9l-1.415 1.414zm-2.828 2.828l-1.415 1.414a7 7 0 0 1-9.9-9.9l1.415-1.414L7.05 9.88l-1.414 1.414a5 5 0 1 0 7.071 7.071l1.414-1.414 1.415 1.414zm-.708-10.607l1.415 1.415-7.071 7.07-1.415-1.414 7.071-7.07z"
+                />
+              </g>
+            </svg>
+            <span>ExploreSocialMe</span>
+          </a>
+        </div>
+      </section>
+      <section id="contact">
+        <div class="info">
+          <h1 class="heading--stroke heading--halftone contact">Contact</h1>
+        </div>
+      </section>
+    </div>
 
-  <div class="mouse-track">
-    <svg class="outer-circle">
-      <circle cx="50%" cy="50%" r="50%" />
-      <circle class="countdown" cx="50%" cy="50%" r="50%" />
-    </svg>
-  </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
-  <script src="main.js"></script>
-</body>
-
+    <div class="mouse-track">
+      <svg class="outer-circle">
+        <circle cx="50%" cy="50%" r="50%" />
+        <circle class="countdown" cx="50%" cy="50%" r="50%" />
+      </svg>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
+    <script src="main.js"></script>
+  </body>
 </html>
