--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
       <section id="contact">
         <div class="info">
           <h1 class="heading--stroke heading--halftone contact">Contact</h1>
+          <a class="mailto" href="mailto:songomen.business@gmail.com">SEND MESSAGE</a>
         </div>
       </section>
     </div>
